Minor Updates to test output

--- a/Black_Scholes/BlackScholes.ipynb
+++ b/Black_Scholes/BlackScholes.ipynb
@@ -81,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%%**********************]  4 of 4 completed\n"
+      "[*********************100%%**********************]  4 of 4 completed"
      ]
     },
     {
@@ -90,19 +90,26 @@
      "text": [
       "                  GOOG        AAPL          GE        AMZN\n",
       "Date                                                      \n",
-      "2010-01-04    6.470740    6.695000   50.141327         NaN\n",
-      "2010-01-05    6.481929    6.734500   50.400936         NaN\n",
-      "2010-01-06    6.378825    6.612500   50.141327         NaN\n",
-      "2010-01-07    6.367033    6.500000   52.737633         NaN\n",
-      "2010-01-08    6.409362    6.676000   53.873531         NaN\n",
+      "2010-01-04    6.470741    6.695000   50.052296   15.610239\n",
+      "2010-01-05    6.481928    6.734500   50.311443   15.541497\n",
+      "2010-01-06    6.378825    6.612500   50.052296   15.149715\n",
+      "2010-01-07    6.367033    6.500000   52.643990   14.797037\n",
+      "2010-01-08    6.409361    6.676000   53.777859   14.994298\n",
       "...                ...         ...         ...         ...\n",
-      "2024-03-27  173.309998  179.830002  143.750992  151.940002\n",
-      "2024-03-28  171.479996  180.380005  140.087784  152.259995\n",
-      "2024-04-01  170.029999  180.970001  139.952118  156.500000\n",
-      "2024-04-02  168.839996  180.690002  136.470001  155.869995\n",
-      "2024-04-03  169.649994  182.410004  145.619995  156.369995\n",
+      "2024-05-01  169.300003  179.000000  159.699997  165.570007\n",
+      "2024-05-02  173.029999  184.720001  162.639999  168.460007\n",
+      "2024-05-03  183.380005  186.210007  164.110001  168.990005\n",
+      "2024-05-06  181.710007  188.699997  167.970001  169.830002\n",
+      "2024-05-07  181.720901  188.889893  169.789993  173.229996\n",
       "\n",
-      "[3586 rows x 4 columns]\n"
+      "[3610 rows x 4 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -124,10 +131,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GOOG    0.576436\n",
-      "AAPL    0.560147\n",
-      "GE      0.285437\n",
-      "AMZN    0.385956\n",
+      "GOOG    0.581605\n",
+      "AAPL    0.566312\n",
+      "GE      0.291506\n",
+      "AMZN    0.417549\n",
       "dtype: float64\n"
      ]
     }
@@ -186,7 +193,7 @@
       "  Tickers  Dividends\n",
       "0    GOOG       0.00\n",
       "1    AAPL       0.24\n",
-      "2      GE       0.08\n",
+      "2      GE       0.28\n",
       "3    AMZN       0.00\n"
      ]
     }
@@ -249,16 +256,16 @@
      "output_type": "stream",
      "text": [
       "  Tickers  Market Price     Sigma  Dividends  Strike Price  Call Premium  \\\n",
-      "0    GOOG    169.649994  0.576436       0.00           195     19.904434   \n",
-      "1    AAPL    182.410004  0.560147       0.24           175     21.883024   \n",
-      "2      GE    145.619995  0.285437       0.08           139     13.377359   \n",
-      "3    AMZN    156.369995  0.385956       0.00           151     21.420932   \n",
+      "0    GOOG    181.720901  0.581605       0.00           195     26.245798   \n",
+      "1    AAPL    188.889893  0.566312       0.24           175     25.289846   \n",
+      "2      GE    169.789993  0.291506       0.28           139     18.614913   \n",
+      "3    AMZN    173.229996  0.417549       0.00           151     34.532282   \n",
       "\n",
       "   Put Premium  \n",
-      "0    40.439873  \n",
-      "1    30.779099  \n",
-      "2     9.035284  \n",
-      "3    12.322734  \n"
+      "0    34.710329  \n",
+      "1    28.438774  \n",
+      "2     6.574662  \n",
+      "3     8.574083  \n"
      ]
     }
    ],
@@ -296,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of the call option is: $2.1334\n"
+      "The value of the call option is: $2.1334 and the answer should be: $2.1334\n"
      ]
     }
    ],
@@ -319,7 +326,7 @@
     "T = 0.25\n",
     "\n",
     "result = BlackScholes(option_type, r, S_0, K, T, sigma, q)\n",
-    "print('The value of the call option is: $' + str(round(result, 4)))"
+    "print('The value of the call option is: $' + str(round(result, 4)) + ' and the answer should be: $2.1334')"
    ]
   }
  ],
