--- a/Black76/Black76.ipynb
+++ b/Black76/Black76.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n"
      ]
     },
@@ -47,49 +48,55 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>GC=F</th>\n",
+       "      <th>SI=F</th>\n",
+       "      <th>CL=F</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>585</th>\n",
+       "      <th>584</th>\n",
        "      <td>2024-05-01</td>\n",
-       "      <td>2299.899902</td>\n",
+       "      <td>26.489000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>585</th>\n",
+       "      <td>2024-05-02</td>\n",
+       "      <td>26.583000</td>\n",
+       "      <td>78.949997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>586</th>\n",
-       "      <td>2024-05-02</td>\n",
-       "      <td>2299.199951</td>\n",
+       "      <td>2024-05-03</td>\n",
+       "      <td>26.445000</td>\n",
+       "      <td>78.110001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>587</th>\n",
-       "      <td>2024-05-03</td>\n",
-       "      <td>2299.000000</td>\n",
+       "      <td>2024-05-06</td>\n",
+       "      <td>27.368999</td>\n",
+       "      <td>78.480003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>588</th>\n",
-       "      <td>2024-05-06</td>\n",
-       "      <td>2321.600098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>589</th>\n",
        "      <td>2024-05-07</td>\n",
-       "      <td>2321.699951</td>\n",
+       "      <td>27.514999</td>\n",
+       "      <td>78.570000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Date         GC=F\n",
-       "585 2024-05-01  2299.899902\n",
-       "586 2024-05-02  2299.199951\n",
-       "587 2024-05-03  2299.000000\n",
-       "588 2024-05-06  2321.600098\n",
-       "589 2024-05-07  2321.699951"
+       "          Date       SI=F       CL=F\n",
+       "584 2024-05-01  26.489000  79.000000\n",
+       "585 2024-05-02  26.583000  78.949997\n",
+       "586 2024-05-03  26.445000  78.110001\n",
+       "587 2024-05-06  27.368999  78.480003\n",
+       "588 2024-05-07  27.514999  78.570000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +109,7 @@
     "#           'CL=F',  # Crude oil futures\n",
     "#           'HG=F',  # Copper futures\n",
     "#           'NG=F']  # Natural gas futures\n",
-    "tickers = ['GC=F']\n",
+    "tickers = ['SI=F','CL=F']\n",
     "\n",
     "def import_commod_data(tickers, start_date):\n",
     "    data = pd.DataFrame()\n",
@@ -121,10 +128,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SI=F    0.021423\n",
+      "CL=F    0.122159\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Function to compute sigma (std dev of log normal historical stock return data)\n",
+    "def compute_sigma(returns):\n",
+    "    # Compute the standard deviation of returns\n",
+    "    sigma = np.std(returns) / 100\n",
+    "    return sigma\n",
+    "\n",
+    "sigma = compute_sigma(commod_data[tickers])\n",
+    "print(sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Function to compute Black76 Model\n",
+    "def Black76(option_type, r, S_0, K, T, sigma):\n",
+    "    # Convert S_0 and K to NumPy arrays for element-wise operations\n",
+    "    S_0 = np.array(S_0)\n",
+    "    K = np.array(K)\n",
+    "\n",
+    "    # Calculate d_1 and d_2 element-wise\n",
+    "    d_1 = (np.log(S_0 / K) + 0.5 * sigma**2 * T) / (sigma * np.sqrt(T))\n",
+    "    d_2 = (np.log(S_0 / K) - 0.5 * sigma**2 * T) / (sigma * np.sqrt(T))\n",
+    "\n",
+    "    if option_type == 'call':\n",
+    "        option_value = (np.exp(-r * T)) * (S_0 * norm.cdf(d_1) - K * norm.cdf(d_2))\n",
+    "    elif option_type == 'put':\n",
+    "        option_value = (np.exp(-r * T)) * (K * norm.cdf(-d_2) - S_0 * norm.cdf(-d_1))\n",
+    "\n",
+    "    return option_value\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('SI=F', 0.012008047594826182), ('CL=F', 3.2362128754906343)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Return Black76 Option Values\n",
+    "# Extract most recent commodity prices as a list\n",
+    "S_0 = commod_data.iloc[-1, 1:].values.tolist()\n",
+    "# Create Strike Price list\n",
+    "K = [28.5, 79.5]\n",
+    "# Type Specification and other metrics\n",
+    "option_type = 'call'\n",
+    "r = 0.05\n",
+    "T = 1\n",
+    "\n",
+    "# Call B76 Function\n",
+    "option_val = Black76(option_type, r, S_0, K, T, sigma)\n",
+    "#print(option_val)\n",
+    "# Return results in a printed list format\n",
+    "option_val_list = []\n",
+    "for i, ticker in enumerate(tickers):\n",
+    "    option_val_list.append((ticker, option_val[i]))\n",
+    "print(option_val_list)\n"
+   ]
   }
  ],
  "metadata": {
