--- a/Black_Scholes/BlackScholes.ipynb
+++ b/Black_Scholes/BlackScholes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {
       "image/png": {
        "height": 300,
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -85,17 +85,17 @@
      "text": [
       "                  GOOG        AAPL          GE        AMZN\n",
       "Date                                                      \n",
-      "2010-01-04    6.470742    6.695000   50.052284   15.610239\n",
-      "2010-01-05    6.481927    6.734500   50.311455   15.541497\n",
-      "2010-01-06    6.378826    6.612500   50.052284   15.149715\n",
-      "2010-01-07    6.367031    6.500000   52.643974   14.797037\n",
-      "2010-01-08    6.409361    6.676000   53.777863   14.994298\n",
+      "2010-01-04    6.470742    6.695000   50.052292   15.610239\n",
+      "2010-01-05    6.481929    6.734500   50.311451   15.541497\n",
+      "2010-01-06    6.378825    6.612500   50.052292   15.149715\n",
+      "2010-01-07    6.367033    6.500000   52.643978   14.797037\n",
+      "2010-01-08    6.409362    6.676000   53.777851   14.994298\n",
       "...                ...         ...         ...         ...\n",
       "2024-05-01  169.300003  179.000000  159.699997  165.570007\n",
       "2024-05-02  173.029999  184.720001  162.639999  168.460007\n",
       "2024-05-03  183.380005  186.210007  164.110001  168.990005\n",
       "2024-05-06  181.710007  188.699997  167.970001  169.830002\n",
-      "2024-05-07  181.920105  188.839996  169.880005  173.169998\n",
+      "2024-05-07  182.813599  188.510895  169.309998  172.559998\n",
       "\n",
       "[3610 rows x 4 columns]\n"
      ]
@@ -118,17 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GOOG    0.581606\n",
-      "AAPL    0.566312\n",
-      "GE      0.291507\n",
-      "AMZN    0.417549\n",
+      "GOOG    0.581611\n",
+      "AAPL    0.566310\n",
+      "GE      0.291502\n",
+      "AMZN    0.417544\n",
       "dtype: float64\n"
      ]
     }
@@ -145,12 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Function to Get Stock Dividends\n",
-    "\n",
     "def get_dividends(tickers):\n",
     "    divs = {}  # Use a dictionary to store dividends for each stock\n",
     "    last_divs = {}  # Get Latest dividend for each stock\n",
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +186,12 @@
       "0    GOOG       0.00\n",
       "1    AAPL       0.24\n",
       "2      GE       0.28\n",
-      "3    AMZN       0.00\n"
+      "3    AMZN       0.00\n",
+      "  Tickers  Market Price     Sigma  Dividends  Strike Price\n",
+      "0    GOOG    182.813599  0.581611       0.00           195\n",
+      "1    AAPL    188.510895  0.566310       0.24           175\n",
+      "2      GE    169.309998  0.291502       0.28           139\n",
+      "3    AMZN    172.559998  0.417544       0.00           151\n"
      ]
     }
    ],
@@ -195,7 +199,7 @@
     "### Function to return BS input values\n",
     "strike_prices = [195, 175, 139, 151]\n",
     "\n",
-    "def get_inputs(stock_data, tickers, strike_prices):\n",
+    "def get_BS_inputs(stock_data, tickers, strike_prices):\n",
     "    # Compute sigma values for each stock\n",
     "    sigma = compute_sigma(stock_data)\n",
     "    # Get most recent prices for each stock\n",
@@ -209,19 +213,18 @@
     "\n",
     "    return input_df\n",
     "\n",
-    "inputs = get_inputs(stock_data, tickers, strike_prices)\n",
-    "#print(inputs)"
+    "inputs = get_BS_inputs(stock_data, tickers, strike_prices)\n",
+    "print(inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Function to compute Black-Scholes\n",
     "def BlackScholes(option_type, r, S_0, K, T, sigma, q):\n",
-    "\n",
     "    d_1 = (np.log(S_0 / K) + (r - q + 0.5 * sigma**2) * T) / (sigma * np.sqrt(T))\n",
     "    d_2 = d_1 - sigma * np.sqrt(T)\n",
     "\n",
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -247,16 +250,16 @@
      "output_type": "stream",
      "text": [
       "  Tickers  Market Price     Sigma  Dividends  Strike Price  Call Premium  \\\n",
-      "0    GOOG    181.920105  0.581606       0.00           195     26.353096   \n",
-      "1    AAPL    188.839996  0.566312       0.24           175     25.265007   \n",
-      "2      GE    169.880005  0.291507       0.28           139     18.669521   \n",
-      "3    AMZN    173.169998  0.417549       0.00           151     34.486842   \n",
+      "0    GOOG    182.813599  0.581611       0.00           195     26.836953   \n",
+      "1    AAPL    188.510895  0.566310       0.24           175     25.101468   \n",
+      "2      GE    169.309998  0.291502       0.28           139     18.324903   \n",
+      "3    AMZN    172.559998  0.417544       0.00           151     34.026109   \n",
       "\n",
       "   Put Premium  \n",
-      "0    34.618424  \n",
-      "1    28.458190  \n",
-      "2     6.551017  \n",
-      "3     8.588641  \n"
+      "0    34.208787  \n",
+      "1    28.586538  \n",
+      "2     6.701940  \n",
+      "3     8.737909  \n"
      ]
     }
    ],
@@ -293,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
