Rounded option vals

--- a/Black76/Black76.ipynb
+++ b/Black76/Black76.ipynb
@@ -179,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('SI=F', 0.012008047594826182), ('CL=F', 3.2362128754906343)]\n"
+      "[('SI=F', 0.012), ('CL=F', 3.2362)]\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
     "# Return results in a printed list format\n",
     "option_val_list = []\n",
     "for i, ticker in enumerate(tickers):\n",
-    "    option_val_list.append((ticker, option_val[i]))\n",
+    "    option_val_list.append((ticker, round(option_val[i], 4)))\n",
     "print(option_val_list)\n"
    ]
   }
