--- a/Black76/Black76.ipynb
+++ b/Black76/Black76.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n"
      ]
@@ -48,55 +49,61 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
+       "      <th>HG=F</th>\n",
        "      <th>SI=F</th>\n",
        "      <th>CL=F</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>584</th>\n",
+       "      <th>585</th>\n",
        "      <td>2024-05-01</td>\n",
+       "      <td>4.5525</td>\n",
        "      <td>26.489000</td>\n",
        "      <td>79.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>585</th>\n",
+       "      <th>586</th>\n",
        "      <td>2024-05-02</td>\n",
+       "      <td>4.4940</td>\n",
        "      <td>26.583000</td>\n",
        "      <td>78.949997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>586</th>\n",
+       "      <th>587</th>\n",
        "      <td>2024-05-03</td>\n",
+       "      <td>4.5735</td>\n",
        "      <td>26.445000</td>\n",
        "      <td>78.110001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>587</th>\n",
+       "      <th>588</th>\n",
        "      <td>2024-05-06</td>\n",
+       "      <td>4.6345</td>\n",
        "      <td>27.368999</td>\n",
        "      <td>78.480003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>588</th>\n",
+       "      <th>589</th>\n",
        "      <td>2024-05-07</td>\n",
-       "      <td>27.514999</td>\n",
-       "      <td>78.570000</td>\n",
+       "      <td>4.5910</td>\n",
+       "      <td>27.504999</td>\n",
+       "      <td>78.320000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Date       SI=F       CL=F\n",
-       "584 2024-05-01  26.489000  79.000000\n",
-       "585 2024-05-02  26.583000  78.949997\n",
-       "586 2024-05-03  26.445000  78.110001\n",
-       "587 2024-05-06  27.368999  78.480003\n",
-       "588 2024-05-07  27.514999  78.570000"
+       "          Date    HG=F       SI=F       CL=F\n",
+       "585 2024-05-01  4.5525  26.489000  79.000000\n",
+       "586 2024-05-02  4.4940  26.583000  78.949997\n",
+       "587 2024-05-03  4.5735  26.445000  78.110001\n",
+       "588 2024-05-06  4.6345  27.368999  78.480003\n",
+       "589 2024-05-07  4.5910  27.504999  78.320000"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +116,7 @@
     "#           'CL=F',  # Crude oil futures\n",
     "#           'HG=F',  # Copper futures\n",
     "#           'NG=F']  # Natural gas futures\n",
-    "tickers = ['SI=F','CL=F']\n",
+    "tickers = ['HG=F','SI=F','CL=F']\n",
     "\n",
     "def import_commod_data(tickers, start_date):\n",
     "    data = pd.DataFrame()\n",
@@ -128,15 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SI=F    0.021423\n",
-      "CL=F    0.122159\n",
+      "HG=F    0.003590\n",
+      "SI=F    0.021422\n",
+      "CL=F    0.122108\n",
       "dtype: float64\n"
      ]
     }
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('SI=F', 0.012), ('CL=F', 3.2362)]\n"
+      "[('HG=F', 1.3403), ('SI=F', 0.958), ('CL=F', 4.2428)]\n"
      ]
     }
    ],
@@ -195,9 +203,9 @@
     "# Extract most recent commodity prices as a list\n",
     "S_0 = commod_data.iloc[-1, 1:].values.tolist()\n",
     "# Create Strike Price list\n",
-    "K = [28.5, 79.5]\n",
+    "K = [6, 28.5, 79.5]\n",
     "# Type Specification and other metrics\n",
-    "option_type = 'call'\n",
+    "option_type = 'put'\n",
     "r = 0.05\n",
     "T = 1\n",
     "\n",
