Added manual test

--- a/Black76/Black76.ipynb
+++ b/Black76/Black76.ipynb
@@ -187,14 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('HG=F', 1.3403), ('SI=F', 0.958), ('CL=F', 4.2428)]\n"
+      "HG=F: 1.382\n",
+      "SI=F: 2.6283\n",
+      "CL=F: 6.557\n"
      ]
     }
    ],
@@ -215,8 +217,37 @@
     "# Return results in a printed list format\n",
     "option_val_list = []\n",
     "for i, ticker in enumerate(tickers):\n",
-    "    option_val_list.append((ticker, round(option_val[i], 4)))\n",
-    "print(option_val_list)\n"
+    "    option_val_list.append((ticker, option_val[i]))\n",
+    "\n",
+    "# Print each item in output on a new line\n",
+    "for item in option_val_list:\n",
+    "    print(f\"{item[0]}: {round(item[1], 4)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of the put given the above inputs is: $3.7982 and the answer is supposed to be: $3.7982\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Manual Test\n",
+    "S_0 = 42\n",
+    "K = 42\n",
+    "T = 1.5\n",
+    "r = 0.05\n",
+    "sigma = 0.20\n",
+    "option_type = 'call'\n",
+    "\n",
+    "test = Black76(option_type, r, S_0, K, T, sigma)\n",
+    "print('The value of the put given the above inputs is: $' + str(round(test, 4)) + ' and the answer is supposed to be: $3.7982')"
    ]
   }
  ],
