Print statements cleaned up

--- a/Black76/Black76.ipynb
+++ b/Black76/Black76.ipynb
@@ -226,14 +226,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of the put given the above inputs is: $3.7982 and the answer is supposed to be: $3.7982\n"
+      "The value of the put given the above inputs is: $3.7982\n",
+      "and the answer is supposed to be: $3.7982\n"
      ]
     }
    ],
@@ -247,7 +248,7 @@
     "option_type = 'call'\n",
     "\n",
     "test = Black76(option_type, r, S_0, K, T, sigma)\n",
-    "print('The value of the put given the above inputs is: $' + str(round(test, 4)) + ' and the answer is supposed to be: $3.7982')"
+    "print(f'The value of the put given the above inputs is: ${round(test, 4)}\\nand the answer is supposed to be: $3.7982')\n"
    ]
   }
  ],
