--- a/Black76/Black76.ipynb
+++ b/Black76/Black76.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -56,54 +56,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>585</th>\n",
-       "      <td>2024-05-01</td>\n",
-       "      <td>4.5525</td>\n",
-       "      <td>26.489000</td>\n",
-       "      <td>79.000000</td>\n",
+       "      <th>635</th>\n",
+       "      <td>2024-07-15</td>\n",
+       "      <td>4.529</td>\n",
+       "      <td>30.672001</td>\n",
+       "      <td>81.910004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>586</th>\n",
-       "      <td>2024-05-02</td>\n",
-       "      <td>4.4940</td>\n",
-       "      <td>26.583000</td>\n",
-       "      <td>78.949997</td>\n",
+       "      <th>636</th>\n",
+       "      <td>2024-07-16</td>\n",
+       "      <td>4.444</td>\n",
+       "      <td>31.195000</td>\n",
+       "      <td>80.760002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>587</th>\n",
-       "      <td>2024-05-03</td>\n",
-       "      <td>4.5735</td>\n",
-       "      <td>26.445000</td>\n",
-       "      <td>78.110001</td>\n",
+       "      <th>637</th>\n",
+       "      <td>2024-07-17</td>\n",
+       "      <td>4.399</td>\n",
+       "      <td>30.136999</td>\n",
+       "      <td>82.849998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>588</th>\n",
-       "      <td>2024-05-06</td>\n",
-       "      <td>4.6345</td>\n",
-       "      <td>27.368999</td>\n",
-       "      <td>78.480003</td>\n",
+       "      <th>638</th>\n",
+       "      <td>2024-07-18</td>\n",
+       "      <td>4.266</td>\n",
+       "      <td>29.995001</td>\n",
+       "      <td>82.820000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>589</th>\n",
-       "      <td>2024-05-07</td>\n",
-       "      <td>4.5910</td>\n",
-       "      <td>27.504999</td>\n",
-       "      <td>78.320000</td>\n",
+       "      <th>639</th>\n",
+       "      <td>2024-07-19</td>\n",
+       "      <td>4.219</td>\n",
+       "      <td>29.087999</td>\n",
+       "      <td>80.129997</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Date    HG=F       SI=F       CL=F\n",
-       "585 2024-05-01  4.5525  26.489000  79.000000\n",
-       "586 2024-05-02  4.4940  26.583000  78.949997\n",
-       "587 2024-05-03  4.5735  26.445000  78.110001\n",
-       "588 2024-05-06  4.6345  27.368999  78.480003\n",
-       "589 2024-05-07  4.5910  27.504999  78.320000"
+       "          Date   HG=F       SI=F       CL=F\n",
+       "635 2024-07-15  4.529  30.672001  81.910004\n",
+       "636 2024-07-16  4.444  31.195000  80.760002\n",
+       "637 2024-07-17  4.399  30.136999  82.849998\n",
+       "638 2024-07-18  4.266  29.995001  82.820000\n",
+       "639 2024-07-19  4.219  29.087999  80.129997"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
     "#           'CL=F',  # Crude oil futures\n",
     "#           'HG=F',  # Copper futures\n",
     "#           'NG=F']  # Natural gas futures\n",
-    "tickers = ['HG=F','SI=F','CL=F']\n",
+    "tickers = ['HG=F', 'SI=F', 'CL=F']\n",
     "\n",
     "def import_commod_data(tickers, start_date):\n",
     "    data = pd.DataFrame()\n",
@@ -135,34 +135,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HG=F    0.003590\n",
-      "SI=F    0.021422\n",
-      "CL=F    0.122108\n",
+      "         HG=F      SI=F      CL=F\n",
+      "635 -0.015114 -0.006929 -0.003649\n",
+      "636 -0.018768  0.017051 -0.014040\n",
+      "637 -0.010126 -0.033916  0.025879\n",
+      "638 -0.030234 -0.004712 -0.000362\n",
+      "639 -0.011017 -0.030238 -0.032480\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Compute Daily Returns\n",
+    "def daily_returns(commod_data):\n",
+    "    # Drop the date column\n",
+    "    commod_data = commod_data.drop(columns = ['Date'])\n",
+    "    # Compute the percentage change\n",
+    "    rets = commod_data.pct_change().dropna()\n",
+    "    \n",
+    "    return rets\n",
+    "\n",
+    "returns = daily_returns(commod_data)\n",
+    "print(returns.tail())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HG=F    0.241712\n",
+      "SI=F    0.295619\n",
+      "CL=F    0.384252\n",
       "dtype: float64\n"
      ]
     }
    ],
    "source": [
     "### Function to compute sigma (std dev of log normal historical stock return data)\n",
-    "def compute_sigma(returns):\n",
+    "def compute_sigma(rets):\n",
     "    # Compute the standard deviation of returns\n",
-    "    sigma = np.std(returns) / 100\n",
+    "    sigma = np.std(rets) * np.sqrt(252) # annualize the standard deviation\n",
+    "\n",
     "    return sigma\n",
     "\n",
-    "sigma = compute_sigma(commod_data[tickers])\n",
-    "print(sigma)"
+    "sigma = compute_sigma(returns)\n",
+    "print(sigma)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HG=F: 1.382\n",
-      "SI=F: 2.6283\n",
-      "CL=F: 6.557\n"
+      "HG=F: 1.7313\n",
+      "SI=F: 2.9464\n",
+      "CL=F: 11.27\n"
      ]
     }
    ],
@@ -226,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
