--- a/Black_Scholes/BlackScholes.ipynb
+++ b/Black_Scholes/BlackScholes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,11 @@
     "    else:\n",
     "        for t in tickers:\n",
     "            data[t] = yf.download(tickers, start_date)['Adj Close']\n",
+    "    \n",
+    "    # Reset the index to include the Date as a column\n",
+    "    data = data.reset_index()\n",
+    "    data.rename(columns={'index': 'Date'}, inplace=True)\n",
+    "\n",
     "    return data\n"
    ]
   },
@@ -42,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +57,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {
       "image/png": {
        "height": 300,
@@ -69,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -83,21 +88,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  GOOG        AAPL          GE        AMZN\n",
-      "Date                                                      \n",
-      "2010-01-04    6.470742    6.695000   50.052292   15.610239\n",
-      "2010-01-05    6.481929    6.734500   50.311451   15.541497\n",
-      "2010-01-06    6.378825    6.612500   50.052292   15.149715\n",
-      "2010-01-07    6.367033    6.500000   52.643978   14.797037\n",
-      "2010-01-08    6.409362    6.676000   53.777851   14.994298\n",
-      "...                ...         ...         ...         ...\n",
-      "2024-05-01  169.300003  179.000000  159.699997  165.570007\n",
-      "2024-05-02  173.029999  184.720001  162.639999  168.460007\n",
-      "2024-05-03  183.380005  186.210007  164.110001  168.990005\n",
-      "2024-05-06  181.710007  188.699997  167.970001  169.830002\n",
-      "2024-05-07  182.813599  188.510895  169.309998  172.559998\n",
+      "           Date        GOOG        AAPL          GE        AMZN\n",
+      "0    2010-01-04    6.461976    6.695000   54.076004         NaN\n",
+      "1    2010-01-05    6.473148    6.734500   54.356037         NaN\n",
+      "2    2010-01-06    6.370184    6.612500   54.076004         NaN\n",
+      "3    2010-01-07    6.358407    6.500000   56.876053         NaN\n",
+      "4    2010-01-08    6.400682    6.676000   58.101086         NaN\n",
+      "...         ...         ...         ...         ...         ...\n",
+      "3655 2024-07-15  234.399994  192.720001  159.559998  188.190002\n",
+      "3656 2024-07-16  234.820007  193.020004  162.850006  185.500000\n",
+      "3657 2024-07-17  228.880005  187.929993  156.660004  182.619995\n",
+      "3658 2024-07-18  224.179993  183.750000  158.789993  179.220001\n",
+      "3659 2024-07-19  224.309998  183.130005  159.130005  179.389999\n",
       "\n",
-      "[3610 rows x 4 columns]\n"
+      "[3660 rows x 5 columns]\n"
      ]
     },
     {
@@ -118,17 +122,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GOOG    0.581611\n",
-      "AAPL    0.566310\n",
-      "GE      0.291502\n",
-      "AMZN    0.417544\n",
+      "          GOOG      AAPL        GE      AMZN\n",
+      "3655  0.016743 -0.009101  0.003459  0.007549\n",
+      "3656  0.001792  0.001557  0.020619 -0.014294\n",
+      "3657 -0.025296 -0.026370 -0.038010 -0.015526\n",
+      "3658 -0.020535 -0.022242  0.013596 -0.018618\n",
+      "3659  0.000580 -0.003374  0.002141  0.000949\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Compute Daily Returns\n",
+    "def daily_returns(stock_data):\n",
+    "    # Drop the date column\n",
+    "    stock_data = stock_data.drop(columns = ['Date'])\n",
+    "    # Compute the percentage change\n",
+    "    rets = stock_data.pct_change().dropna()\n",
+    "    \n",
+    "    return rets\n",
+    "\n",
+    "returns = daily_returns(stock_data)\n",
+    "print(returns.tail())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The computed sigma values are:\n",
+      "GOOG    0.282922\n",
+      "AAPL    0.327455\n",
+      "GE      0.340049\n",
+      "AMZN    0.280213\n",
       "dtype: float64\n"
      ]
     }
@@ -137,15 +174,16 @@
     "### Function to compute sigma (std dev of log normal historical stock return data)\n",
     "def compute_sigma(returns):\n",
     "    # Compute the standard deviation of returns\n",
-    "    sigma = np.std(returns) / 100\n",
+    "    sigma = np.std(returns) * np.sqrt(252) # 252 trading days in a year\n",
     "    return sigma\n",
     "\n",
-    "print(compute_sigma(stock_data))\n"
+    "print('The computed sigma values are:')\n",
+    "print(compute_sigma(returns))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -183,15 +221,15 @@
      "output_type": "stream",
      "text": [
       "  Tickers  Dividends\n",
-      "0    GOOG       0.00\n",
-      "1    AAPL       0.24\n",
+      "0    GOOG       0.20\n",
+      "1    AAPL       0.25\n",
       "2      GE       0.28\n",
       "3    AMZN       0.00\n",
       "  Tickers  Market Price     Sigma  Dividends  Strike Price\n",
-      "0    GOOG    182.813599  0.581611       0.00           195\n",
-      "1    AAPL    188.510895  0.566310       0.24           175\n",
-      "2      GE    169.309998  0.291502       0.28           139\n",
-      "3    AMZN    172.559998  0.417544       0.00           151\n"
+      "0    GOOG    224.309998  0.282922       0.20           195\n",
+      "1    AAPL    183.130005  0.327455       0.25           175\n",
+      "2      GE    159.130005  0.340049       0.28           139\n",
+      "3    AMZN    179.389999  0.280213       0.00           151\n"
      ]
     }
    ],
@@ -199,9 +237,11 @@
     "### Function to return BS input values\n",
     "strike_prices = [195, 175, 139, 151]\n",
     "\n",
-    "def get_BS_inputs(stock_data, tickers, strike_prices):\n",
+    "def get_BS_inputs(daily_rets, stock_data, tickers, strike_prices):\n",
+    "    # Drop the date column\n",
+    "    stock_data = stock_data.drop(columns = ['Date'])\n",
     "    # Compute sigma values for each stock\n",
-    "    sigma = compute_sigma(stock_data)\n",
+    "    sigma = compute_sigma(returns)\n",
     "    # Get most recent prices for each stock\n",
     "    most_recent_price = stock_data.iloc[-1, 0:len(tickers)].astype(float)\n",
     "    # Create a DataFrame from the lists\n",
@@ -213,13 +253,13 @@
     "\n",
     "    return input_df\n",
     "\n",
-    "inputs = get_BS_inputs(stock_data, tickers, strike_prices)\n",
-    "print(inputs)"
+    "inputs = get_BS_inputs(returns, stock_data, tickers, strike_prices)\n",
+    "print(inputs)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,12 +277,12 @@
     "    else:\n",
     "        raise ValueError(\"Invalid option_type. Use 0 for call option or 1 for put option.\")\n",
     "\n",
-    "    return option_price"
+    "    return option_price\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -250,16 +290,16 @@
      "output_type": "stream",
      "text": [
       "  Tickers  Market Price     Sigma  Dividends  Strike Price  Call Premium  \\\n",
-      "0    GOOG    182.813599  0.581611       0.00           195     26.836953   \n",
-      "1    AAPL    188.510895  0.566310       0.24           175     25.101468   \n",
-      "2      GE    169.309998  0.291502       0.28           139     18.324903   \n",
-      "3    AMZN    172.559998  0.417544       0.00           151     34.026109   \n",
+      "0    GOOG    224.309998  0.282922       0.20           195     22.869165   \n",
+      "1    AAPL    183.130005  0.327455       0.25           175     11.201000   \n",
+      "2      GE    159.130005  0.340049       0.28           139     14.538576   \n",
+      "3    AMZN    179.389999  0.280213       0.00           151     34.815232   \n",
       "\n",
       "   Put Premium  \n",
-      "0    34.208787  \n",
-      "1    28.586538  \n",
-      "2     6.701940  \n",
-      "3     8.737909  \n"
+      "0    10.090519  \n",
+      "1    20.268573  \n",
+      "2    11.765673  \n",
+      "3     2.697030  \n"
      ]
     }
    ],
@@ -296,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
